_generated-config/2.7/config/quarkus-http-http-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-http-http-configuration_configuration]]link:#quarkus-http-http-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-http-http-configuration_quarkus.http.cors]]`link:#quarkus-http-http-configuration_quarkus.http.cors[quarkus.http.cors]`

[.description]
--
Enable the CORS filter.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.port]]`link:#quarkus-http-http-configuration_quarkus.http.port[quarkus.http.port]`

[.description]
--
The HTTP port
--|int 
|`8080`


a| [[quarkus-http-http-configuration_quarkus.http.test-port]]`link:#quarkus-http-http-configuration_quarkus.http.test-port[quarkus.http.test-port]`

[.description]
--
The HTTP port used to run tests
--|int 
|`8081`


a| [[quarkus-http-http-configuration_quarkus.http.host]]`link:#quarkus-http-http-configuration_quarkus.http.host[quarkus.http.host]`

[.description]
--
The HTTP host In dev/test mode this defaults to localhost, in prod mode this defaults to 0.0.0.0 Defaulting to 0.0.0.0 makes it easier to deploy Quarkus to container, however it is not suitable for dev/test mode as other people on the network can connect to your development machine.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.host-enabled]]`link:#quarkus-http-http-configuration_quarkus.http.host-enabled[quarkus.http.host-enabled]`

[.description]
--
Enable listening to host:port
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.ssl-port]]`link:#quarkus-http-http-configuration_quarkus.http.ssl-port[quarkus.http.ssl-port]`

[.description]
--
The HTTPS port
--|int 
|`8443`


a| [[quarkus-http-http-configuration_quarkus.http.test-ssl-port]]`link:#quarkus-http-http-configuration_quarkus.http.test-ssl-port[quarkus.http.test-ssl-port]`

[.description]
--
The HTTPS port used to run tests
--|int 
|`8444`


a| [[quarkus-http-http-configuration_quarkus.http.insecure-requests]]`link:#quarkus-http-http-configuration_quarkus.http.insecure-requests[quarkus.http.insecure-requests]`

[.description]
--
If insecure (i.e. http rather than https) requests are allowed. If this is `enabled` then http works as normal. `redirect` will still open the http port, but all requests will be redirected to the HTTPS port. `disabled` will prevent the HTTP port from opening at all.
--|`enabled`, `redirect`, `disabled` 
|`enabled`


a| [[quarkus-http-http-configuration_quarkus.http.http2]]`link:#quarkus-http-http-configuration_quarkus.http.http2[quarkus.http.http2]`

[.description]
--
If this is true (the default) then HTTP/2 will be enabled. Note that for browsers to be able to use it HTTPS must be enabled, and you must be running on JDK11 or above, as JDK8 does not support ALPN.
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.cors.origins]]`link:#quarkus-http-http-configuration_quarkus.http.cors.origins[quarkus.http.cors.origins]`

[.description]
--
Origins allowed for CORS Comma separated list of valid URLs. ex: http://www.quarkus.io,http://localhost:3000 The filter allows any origin if this is not set. default: returns any requested origin as valid
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.methods]]`link:#quarkus-http-http-configuration_quarkus.http.cors.methods[quarkus.http.cors.methods]`

[.description]
--
HTTP methods allowed for CORS Comma separated list of valid methods. ex: GET,PUT,POST The filter allows any method if this is not set. default: returns any requested method as valid
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.headers]]`link:#quarkus-http-http-configuration_quarkus.http.cors.headers[quarkus.http.cors.headers]`

[.description]
--
HTTP headers allowed for CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition The filter allows any header if this is not set. default: returns any requested header as valid
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.exposed-headers]]`link:#quarkus-http-http-configuration_quarkus.http.cors.exposed-headers[quarkus.http.cors.exposed-headers]`

[.description]
--
HTTP headers exposed in CORS Comma separated list of valid headers. ex: X-Custom,Content-Disposition default: empty
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.access-control-max-age]]`link:#quarkus-http-http-configuration_quarkus.http.cors.access-control-max-age[quarkus.http.cors.access-control-max-age]`

[.description]
--
The `Access-Control-Max-Age` response header value indicating how long the results of a pre-flight request can be cached.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-http-http-configuration_quarkus.http.cors.access-control-allow-credentials]]`link:#quarkus-http-http-configuration_quarkus.http.cors.access-control-allow-credentials[quarkus.http.cors.access-control-allow-credentials]`

[.description]
--
The `Access-Control-Allow-Credentials` header is used to tell the browsers to expose the response to front-end JavaScript code when the request’s credentials mode Request.credentials is “include”. The value of this header will default to `true` if `quarkus.http.cors.origins` property is set and there is a match with the precise `Origin` header and that header is not '++*++'.
--|boolean 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.files]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.files[quarkus.http.ssl.certificate.files]`

[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files require SNI to be enabled.
--|list of path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-files]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-files[quarkus.http.ssl.certificate.key-files]`

[.description]
--
The list of path to server certificates private key file using the PEM format. Specifying multiple files require SNI to be enabled. The order of the key files must match the order of the certificates.
--|list of path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file[quarkus.http.ssl.certificate.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.
--|path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file-type]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-file-type[quarkus.http.ssl.certificate.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-provider]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-provider[quarkus.http.ssl.certificate.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-password[quarkus.http.ssl.certificate.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-alias]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-alias[quarkus.http.ssl.certificate.key-store-key-alias]`

[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.key-store-key-password[quarkus.http.ssl.certificate.key-store-key-password]`

[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust.
--|path 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file-type]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-provider]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-cert-alias]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.certificate.trust-store-cert-alias[quarkus.http.ssl.certificate.trust-store-cert-alias]`

[.description]
--
An optional parameter to trust only one specific certificate in the trust store (instead of trusting all certificates in the store).
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.cipher-suites]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.cipher-suites[quarkus.http.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.
--|list of string 
|


a| [[quarkus-http-http-configuration_quarkus.http.ssl.protocols]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.protocols[quarkus.http.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-http-http-configuration_quarkus.http.ssl.sni]]`link:#quarkus-http-http-configuration_quarkus.http.ssl.sni[quarkus.http.ssl.sni]`

[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.io-threads]]`link:#quarkus-http-http-configuration_quarkus.http.io-threads[quarkus.http.io-threads]`

[.description]
--
The number if IO threads used to perform IO. This will be automatically set to a reasonable value based on the number of CPU cores if it is not provided. If this is set to a higher value than the number of Vert.x event loops then it will be capped at the number of event loops. In general this should be controlled by setting quarkus.vertx.event-loops-pool-size, this setting should only be used if you want to limit the number of HTTP io threads to a smaller number than the total number of IO threads.
--|int 
|


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-header-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-header-size[quarkus.http.limits.max-header-size]`

[.description]
--
The maximum length of all headers.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`20K`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-body-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-body-size[quarkus.http.limits.max-body-size]`

[.description]
--
The maximum size of a request body.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10240K`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-chunk-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-chunk-size[quarkus.http.limits.max-chunk-size]`

[.description]
--
The max HTTP chunk size
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`8192`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-initial-line-length]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-initial-line-length[quarkus.http.limits.max-initial-line-length]`

[.description]
--
The maximum length of the initial line (e.g. `"GET / HTTP/1.0"`).
--|int 
|`4096`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-form-attribute-size]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-form-attribute-size[quarkus.http.limits.max-form-attribute-size]`

[.description]
--
The maximum length of a form attribute.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`2048`


a| [[quarkus-http-http-configuration_quarkus.http.limits.max-connections]]`link:#quarkus-http-http-configuration_quarkus.http.limits.max-connections[quarkus.http.limits.max-connections]`

[.description]
--
The maximum number of connections that are allowed at any one time. If this is set it is recommended to set a short idle timeout.
--|int 
|


a| [[quarkus-http-http-configuration_quarkus.http.idle-timeout]]`link:#quarkus-http-http-configuration_quarkus.http.idle-timeout[quarkus.http.idle-timeout]`

[.description]
--
Http connection idle timeout
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`30M`


a| [[quarkus-http-http-configuration_quarkus.http.read-timeout]]`link:#quarkus-http-http-configuration_quarkus.http.read-timeout[quarkus.http.read-timeout]`

[.description]
--
Http connection read timeout for blocking IO. This is the maximum amount of time a thread will wait for data, before an IOException will be thrown and the connection closed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-http-http-configuration_quarkus.http.body.handle-file-uploads]]`link:#quarkus-http-http-configuration_quarkus.http.body.handle-file-uploads[quarkus.http.body.handle-file-uploads]`

[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally. 
 If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.uploads-directory]]`link:#quarkus-http-http-configuration_quarkus.http.body.uploads-directory[quarkus.http.body.uploads-directory]`

[.description]
--
The directory where the files sent using `multipart/form-data` should be stored. 
 Either an absolute path or a path relative to the current directory of the application process.
--|string 
|`${java.io.tmpdir}/uploads`


a| [[quarkus-http-http-configuration_quarkus.http.body.merge-form-attributes]]`link:#quarkus-http-http-configuration_quarkus.http.body.merge-form-attributes[quarkus.http.body.merge-form-attributes]`

[.description]
--
Whether the form attributes should be added to the request parameters. 
 If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.delete-uploaded-files-on-end]]`link:#quarkus-http-http-configuration_quarkus.http.body.delete-uploaded-files-on-end[quarkus.http.body.delete-uploaded-files-on-end]`

[.description]
--
Whether the uploaded files should be removed after serving the request. 
 If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise the files will be left there forever.
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.body.preallocate-body-buffer]]`link:#quarkus-http-http-configuration_quarkus.http.body.preallocate-body-buffer[quarkus.http.body.preallocate-body-buffer]`

[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value. 
 If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise the body buffer is pre-allocated to 1KB, and is resized dynamically
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.auth.session.encryption-key]]`link:#quarkus-http-http-configuration_quarkus.http.auth.session.encryption-key[quarkus.http.auth.session.encryption-key]`

[.description]
--
The encryption key that is used to store persistent logins (e.g. for form auth). Logins are stored in a persistent cookie that is encrypted with AES-256 using a key derived from a SHA-256 hash of the key that is provided here. If no key is provided then an in-memory one will be generated, this will change on every restart though so it is not suitable for production environments. This must be more than 16 characters long for security reasons
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.so-reuse-port]]`link:#quarkus-http-http-configuration_quarkus.http.so-reuse-port[quarkus.http.so-reuse-port]`

[.description]
--
Enable socket reuse port (linux/macOs native transport only)
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-quick-ack]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-quick-ack[quarkus.http.tcp-quick-ack]`

[.description]
--
Enable tcp quick ack (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-cork]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-cork[quarkus.http.tcp-cork]`

[.description]
--
Enable tcp cork (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.tcp-fast-open]]`link:#quarkus-http-http-configuration_quarkus.http.tcp-fast-open[quarkus.http.tcp-fast-open]`

[.description]
--
Enable tcp fast open (linux native transport only)
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.accept-backlog]]`link:#quarkus-http-http-configuration_quarkus.http.accept-backlog[quarkus.http.accept-backlog]`

[.description]
--
The accept backlog, this is how many connections can be waiting to be accepted before connections start being rejected
--|int 
|`-1`


a| [[quarkus-http-http-configuration_quarkus.http.domain-socket]]`link:#quarkus-http-http-configuration_quarkus.http.domain-socket[quarkus.http.domain-socket]`

[.description]
--
Path to a unix domain socket
--|string 
|`/var/run/io.quarkus.app.socket`


a| [[quarkus-http-http-configuration_quarkus.http.domain-socket-enabled]]`link:#quarkus-http-http-configuration_quarkus.http.domain-socket-enabled[quarkus.http.domain-socket-enabled]`

[.description]
--
Enable listening to host:port
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.record-request-start-time]]`link:#quarkus-http-http-configuration_quarkus.http.record-request-start-time[quarkus.http.record-request-start-time]`

[.description]
--
If this is true then the request start time will be recorded to enable logging of total request time. This has a small performance penalty, so is disabled by default.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.enabled]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.enabled[quarkus.http.access-log.enabled]`

[.description]
--
If access logging is enabled. By default this will log via the standard logging facility
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.exclude-pattern]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.exclude-pattern[quarkus.http.access-log.exclude-pattern]`

[.description]
--
A regular expression that can be used to exclude some paths from logging.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.access-log.pattern]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.pattern[quarkus.http.access-log.pattern]`

[.description]
--
The access log pattern.

If this is the string `common`, `combined` or `long` then this will use one of the specified named formats:

- common: `%h %l %u %t "%r" %s %b`
- combined: `%h %l %u %t "%r" %s %b "%{i,Referer}" "%{i,User-Agent}"`
- long: `%r\n%{ALL_REQUEST_HEADERS}`

Otherwise consult the Quarkus documentation for the full list of variables that can be used.
--|string 
|`common`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-to-file]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-to-file[quarkus.http.access-log.log-to-file]`

[.description]
--
If logging should be done to a separate file.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.base-file-name]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.base-file-name[quarkus.http.access-log.base-file-name]`

[.description]
--
The access log file base name, defaults to 'quarkus' which will give a log file name of 'quarkus.log'.
--|string 
|`quarkus`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-directory]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-directory[quarkus.http.access-log.log-directory]`

[.description]
--
The log directory to use when logging access to a file If this is not set then the current working directory is used.
--|string 
|


a| [[quarkus-http-http-configuration_quarkus.http.access-log.log-suffix]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.log-suffix[quarkus.http.access-log.log-suffix]`

[.description]
--
The log file suffix
--|string 
|`.log`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.category]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.category[quarkus.http.access-log.category]`

[.description]
--
The log category to use if logging is being done via the standard log mechanism (i.e. if base-file-name is empty).
--|string 
|`io.quarkus.http.access-log`


a| [[quarkus-http-http-configuration_quarkus.http.access-log.rotate]]`link:#quarkus-http-http-configuration_quarkus.http.access-log.rotate[quarkus.http.access-log.rotate]`

[.description]
--
If the log should be rotated daily
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.enable-compression]]`link:#quarkus-http-http-configuration_quarkus.http.enable-compression[quarkus.http.enable-compression]`

[.description]
--
If responses should be compressed. Note that this will attempt to compress all responses, to avoid compressing already compressed content (such as images) you need to set the following header: Content-Encoding: identity Which will tell vert.x not to compress the response.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.enable-decompression]]`link:#quarkus-http-http-configuration_quarkus.http.enable-decompression[quarkus.http.enable-decompression]`

[.description]
--
When enabled, vert.x will decompress the request's body if it's compressed. Note that the compression format (e.g., gzip) must be specified in the Content-Encoding header in the request.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.unhandled-error-content-type-default]]`link:#quarkus-http-http-configuration_quarkus.http.unhandled-error-content-type-default[quarkus.http.unhandled-error-content-type-default]`

[.description]
--
Provides a hint (optional) for the default content type of responses generated for the errors not handled by the application. 
 If the client requested a supported content-type in request headers (e.g. "Accept: application/json", "Accept: text/html"), Quarkus will use that content type. 
 Otherwise, it will default to the content type configured here.
--|`json`, `html` 
|


a| [[quarkus-http-http-configuration_quarkus.http.proxy.proxy-address-forwarding]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.proxy-address-forwarding[quarkus.http.proxy.proxy-address-forwarding]`

[.description]
--
If this is true then the address, scheme etc will be set from headers forwarded by the proxy server, such as `X-Forwarded-For`. This should only be set if you are behind a proxy that sets these headers.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.allow-forwarded]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.allow-forwarded[quarkus.http.proxy.allow-forwarded]`

[.description]
--
If this is true and proxy address forwarding is enabled then the standard `Forwarded` header will be used, rather than the more common but not standard `X-Forwarded-For`.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-host]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-host[quarkus.http.proxy.enable-forwarded-host]`

[.description]
--
Enable override the received request's host through a forwarded host header.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.forwarded-host-header]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.forwarded-host-header[quarkus.http.proxy.forwarded-host-header]`

[.description]
--
Configure the forwarded host header to be used if override enabled.
--|string 
|`X-Forwarded-Host`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-prefix]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.enable-forwarded-prefix[quarkus.http.proxy.enable-forwarded-prefix]`

[.description]
--
Enable prefix the received request's path with a forwarded prefix header.
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.proxy.forwarded-prefix-header]]`link:#quarkus-http-http-configuration_quarkus.http.proxy.forwarded-prefix-header[quarkus.http.proxy.forwarded-prefix-header]`

[.description]
--
Configure the forwarded prefix header to be used if prefixing enabled.
--|string 
|`X-Forwarded-Prefix`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.case-sensitive[quarkus.http.same-site-cookie."same-site-cookie".case-sensitive]`

[.description]
--
If the cookie pattern is case sensitive
--|boolean 
|`false`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.value]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.value[quarkus.http.same-site-cookie."same-site-cookie".value]`

[.description]
--
The value to set in the samesite attribute
--|`none`, `strict`, `lax` 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.enable-client-checker[quarkus.http.same-site-cookie."same-site-cookie".enable-client-checker]`

[.description]
--
Some User Agents break when sent SameSite=None, this will detect them and avoid sending the value
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none]]`link:#quarkus-http-http-configuration_quarkus.http.same-site-cookie.-same-site-cookie-.add-secure-for-none[quarkus.http.same-site-cookie."same-site-cookie".add-secure-for-none]`

[.description]
--
If this is true then the 'secure' attribute will automatically be sent on cookies with a SameSite attribute of None.
--|boolean 
|`true`


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.path]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.path[quarkus.http.header."header".path]`

[.description]
--
The path this header should be applied
--|string 
|`/*`


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.value]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.value[quarkus.http.header."header".value]`

[.description]
--
The value for this header configuration
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-http-http-configuration_quarkus.http.header.-header-.methods]]`link:#quarkus-http-http-configuration_quarkus.http.header.-header-.methods[quarkus.http.header."header".methods]`

[.description]
--
The HTTP methods for this header configuration
--|list of string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]

[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
